--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,17 @@
 {
     "version": "0.2.0",
     "configurations": [
-    
         {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
+            "name": "Attach by Process ID",
+            "processId": "${command:PickProcess}",
+            "request": "attach",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\src\\lib\\action.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
-        }
+            "type": "node"
+        },
+
+       
+       
     ]
 }
