--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "drizzle-kit push:pg"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -35,6 +36,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "drizzle-zod": "^0.8.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "flag-icons": "^7.3.2",
     "ioredis": "^5.6.1",
@@ -66,6 +68,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "typescript": "^5"
   }
 }
