--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@tanstack/react-table": "^8.21.2",
     "@types/uuid": "^10.0.0",
     "@upstash/redis": "^1.34.9",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
